--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ display:grid;
 grid-template-columns:repeat(2, 250px);
 padding: 5px;
 }
-#littlePic{ 
+.littlePic{ 
     width:250px;
 border: 3px solid rgb(50, 8, 203);
 color: wheat;
@@ -44,6 +44,6 @@ border-radius: 5px;
 opacity: .60;
 
 }       
-#littlePic:hover, #littlePic:focus{
+.littlePic:hover, .littlePic:focus{
 opacity: 1;
 }
